Traducida funcion de 'findUserById' para usar swagger
